Add Kotlin DSL version of Java 16 fix
Fixes #215